syntax = "proto3";

package com.road.yishi.proto.secret;

message AllSecretInfoMsg {
  repeated int32 allSecretInfoMsg = 1;
}
