syntax = "proto3";

package com.road.yishi.proto.secret;

message SecretReqMsg {
  int32 secretId = 1;
  int32 optionId = 2;
  int32 opType = 3;
  int32 curLayer = 4;
  int32 payType = 5;
  int32 isSkip = 6;
}
