syntax = "proto3";

package com.road.yishi.proto.secret;

message SecretTreasureMsg {
  string lostTreasure = 1;
  string receiveTreasure = 2;
  string ownTreasure = 3;
  int32 type = 4;
}
